--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 PAGEANT.exe filter=lfs diff=lfs merge=lfs -text
+/database/R0002.tsv filter=lfs diff=lfs merge=lfs -text
+/database/R0004.tsv filter=lfs diff=lfs merge=lfs -text
