--- a/environment_mac.yml
+++ b/environment_mac.yml
@@ -1,87 +1,89 @@
 name: pageant
 channels:
   - conda-forge
+  - defaults
 dependencies:
-  - brotlipy=0.7.0=py39h46acfd9_1001
-  - ca-certificates=2021.5.30=h4653dfc_0
-  - certifi=2021.5.30=py39h2804cbe_0
-  - cffi=1.14.5=py39h702c04f_0
-  - chardet=4.0.0=py39h2804cbe_1
-  - colorama=0.4.4=pyh9f0ad1d_0
-  - cryptography=3.4.7=py39h73257c9_0
-  - cycler=0.10.0=py_2
-  - freetype=2.10.4=h17b34a0_1
-  - idna=2.10=pyh9f0ad1d_0
-  - jinja2=2.11.3=pyh44b312d_0
+  - blas=1.0=mkl
+  - bottleneck=1.3.2=py38hf1fa96c_1
+  - brotli=1.0.9=hb1e8313_2
+  - brotlipy=0.7.0=py38h9ed2024_1003
+  - ca-certificates=2021.7.5=hecd8cb5_1
+  - certifi=2021.5.30=py38hecd8cb5_0
+  - cffi=1.14.6=py38h2125817_0
+  - chardet=4.0.0=py38hecd8cb5_1003
+  - cryptography=3.4.7=py38h2fd3fbb_0
+  - cycler=0.10.0=py38_0
+  - fonttools=4.25.0=pyhd3eb1b0_0
+  - freetype=2.10.4=ha233b18_0
+  - idna=2.10=pyhd3eb1b0_0
+  - intel-openmp=2021.3.0=hecd8cb5_3375
   - joblib=1.0.1=pyhd8ed1ab_0
-  - jpeg=9d=h27ca646_0
-  - kiwisolver=1.3.1=py39h5a63225_1
-  - lcms2=2.12=had6a04f_0
-  - libblas=3.9.0=9_openblas
-  - libcblas=3.9.0=9_openblas
-  - libcxx=11.1.0=h168391b_0
-  - libffi=3.3=h9f76cd9_2
-  - libgfortran=5.0.0.dev0=11_0_1_hf114ba7_22
-  - libgfortran5=11.0.1.dev0=hf114ba7_22
-  - liblapack=3.9.0=9_openblas
-  - libllvm10=10.0.1=h4468dd5_2
-  - libopenblas=0.3.15=openmp_hf330de4_0
-  - libpng=1.6.37=hf7e6567_2
-  - libtiff=4.2.0=hcbb2f27_1
-  - libwebp-base=1.2.0=h27ca646_2
-  - llvm-openmp=11.1.0=hf3c4609_1
-  - llvmlite=0.36.0=py39h2f15362_0
-  - lz4-c=1.9.3=h9f76cd9_0
-  - markupsafe=1.1.1=py39h46acfd9_3
-  - matplotlib=3.4.1=py39hdf13c20_0
-  - matplotlib-base=3.4.1=py39h5aa4fe7_0
-  - ncurses=6.2=h9aa5885_4
-  - numpy=1.20.2=py39h1f3b974_0
-  - olefile=0.46=pyh9f0ad1d_1
-  - openjpeg=2.4.0=hfb99f25_0
-  - openssl=1.1.1k=h27ca646_0
-  - pandas=1.2.4=py39h7f752ed_0
-  - pillow=8.1.2=py39h282ff46_1
+  - jpeg=9b=he5867d9_2
+  - kiwisolver=1.3.1=py38h23ab428_0
+  - lcms2=2.12=hf1fd2bf_0
+  - libblas=3.9.0=10_mkl
+  - libcblas=3.9.0=10_mkl
+  - libcxx=10.0.0=1
+  - libffi=3.3=hb1e8313_2
+  - libgfortran=3.0.1=0
+  - libllvm10=10.0.1=h009f743_3
+  - libpng=1.6.37=ha441bb4_0
+  - libtiff=4.2.0=h87d7836_0
+  - libwebp-base=1.2.0=h9ed2024_0
+  - llvm-openmp=12.0.1=hda6cdc1_1
+  - llvmlite=0.36.0=py38he4411ff_4
+  - lz4-c=1.9.3=h23ab428_0
+  - matplotlib=3.4.2=py38hecd8cb5_0
+  - matplotlib-base=3.4.2=py38h8b3ea08_0
+  - mkl=2021.3.0=hecd8cb5_517
+  - mkl-service=2.4.0=py38h9ed2024_0
+  - mkl_fft=1.3.0=py38h4a7008c_2
+  - mkl_random=1.2.2=py38hb2f4e1b_0
+  - munkres=1.1.4=py_0
+  - ncurses=6.2=h0a44026_1
+  - numba=0.53.1=py38hb2f4e1b_0
+  - numexpr=2.7.3=py38h5873af2_1
+  - numpy=1.20.3=py38h4b4dc7a_0
+  - numpy-base=1.20.3=py38he0bd621_0
+  - olefile=0.46=py_0
+  - openjpeg=2.3.0=hb95cd4c_1
+  - openssl=1.1.1k=h9ed2024_0
+  - pandas=1.3.0=py38h23ab428_0
+  - pillow=8.3.1=py38ha4cf6ea_0
+  - pip=21.1.3=py38hecd8cb5_0
   - pyasn1=0.4.8=py_0
-  - pycparser=2.20=pyh9f0ad1d_2
-  - pyopenssl=20.0.1=pyhd8ed1ab_0
-  - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pysocks=1.7.1=py39h2804cbe_3
-  - python=3.9.2=hcbd9b3a_0_cpython
-  - python-dateutil=2.8.1=py_0
-  - python_abi=3.9=1_cp39
-  - pytz=2021.1=pyhd8ed1ab_0
-  - qrcode=6.1=py_0
-  - readline=8.1=hedafd6a_0
-  - requests=2.25.1=pyhd3deb0d_0
-  - rsa=4.7.2=pyh44b312d_0
-  - scikit-learn=0.24.2=py39hab69601_1
-  - scipy=1.6.3=py39h5060c3b_0
-  - setuptools=49.6.0=py39h2804cbe_3
-  - six=1.15.0=pyh9f0ad1d_0
-  - sqlite=3.35.5=hc49ca36_0
-  - threadpoolctl=2.2.0=pyh8a188c0_0
-  - tk=8.6.10=hf7e6567_1
-  - tornado=6.1=py39h46acfd9_1
-  - tzdata=2021a=he74cb21_0
-  - urllib3=1.26.4=pyhd8ed1ab_0
-  - wheel=0.36.2=pyhd3deb0d_0
-  - xz=5.2.5=h642e427_1
-  - zlib=1.2.11=h31e879b_1009
-  - zstd=1.4.9=h5b28eab_0
+  - pycparser=2.20=py_2
+  - pynndescent=0.5.4=pyh6c4a22f_0
+  - pyopenssl=20.0.1=pyhd3eb1b0_1
+  - pyparsing=2.4.7=pyhd3eb1b0_0
+  - pysocks=1.7.1=py38_1
+  - python=3.8.11=h88f2d9e_0_cpython
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python_abi=3.8=2_cp38
+  - pytz=2021.1=pyhd3eb1b0_0
+  - readline=8.1=h9ed2024_0
+  - requests=2.25.1=pyhd3eb1b0_0
+  - rsa=4.7.2=pyhd3eb1b0_1
+  - scikit-learn=0.22.1=py38h3dc85bc_1
+  - scipy=1.6.2=py38hd5f7400_1
+  - setuptools=52.0.0=py38hecd8cb5_0
+  - six=1.16.0=pyhd3eb1b0_0
+  - sqlite=3.36.0=hce871da_0
+  - tbb=2020.3=h879752b_0
+  - tk=8.6.10=hb0a8c7a_0
+  - tornado=6.1=py38h9ed2024_0
+  - tqdm=4.61.2=pyhd3eb1b0_1
+  - umap-learn=0.5.1=py38h50d1736_1
+  - urllib3=1.26.6=pyhd3eb1b0_1
+  - wheel=0.36.2=pyhd3eb1b0_0
+  - xz=5.2.5=h1de35cc_0
+  - zlib=1.2.11=h1de35cc_3
+  - zstd=1.4.9=h322a384_0
   - pip:
     - detect-delimiter==0.1.1
+    - jinja2==3.0.1
+    - markupsafe==2.0.1
     - matplotlib-venn==0.11.6
-    - naked==0.1.31
-    - numba==0.53.1
-    - pip==21.1.1
-    - pydes==2.0.1
-    - pynndescent==0.5.4
     - pyqt5==5.15.1
-    - pyqt5-sip==12.8.1
-    - pyyaml==5.4.1
-    - pyzbar==0.1.8
-    - shellescape==3.8.1
-    - tqdm==4.60.0
-    - umap-learn==0.5.1
+    - pyqt5-sip==12.9.0
 prefix: /Users/sheng/.conda/envs/pageant
