Revert config.ini

--- a/bin/config.ini
+++ b/bin/config.ini
@@ -5,8 +5,9 @@ quan_ref = ./population_genome
 qual_ref = ./population_genome
 maf_ref = ./personal_genome/hapmap3.vcf.gz
 ps_ref = ./personal_genome/hapmap3.vcf.gz
-qr_key = ./output/qr_code/doctor\key
+qr_key = ./output/qr_code/doctor/key
 qr_snps = ./personal_genome/fingerprint_snps.txt
+qr_dr = ./output/qr_code/doctor
 qr_user = ./output/qr_code/user
 qr_dir = ./output/qr_code/doctor
 population_file = ./personal_genome/hapmap3_samples.txt
@@ -46,7 +47,7 @@ qc_pihat = 0.2
 use_qc_ref = False
 
 [module]
-sample_qc = False
+sample_qc = True
 ref_dist = True
 ref_qc = True
 vep = False
