--- a/environment_linux.yml
+++ b/environment_linux.yml
@@ -1,15 +1,15 @@
 name: pageant
 channels:
-  - conda-forge
   - https://repo.anaconda.com/pkgs/main
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=4.5=1_gnu
   - blas=1.0=mkl
   - bottleneck=1.3.2=py38heb32a55_1
-  - ca-certificates=2021.5.30=ha878542_0
-  - certifi=2021.5.30=py38h578d9bd_0
+  - ca-certificates=2021.7.5=h06a4308_1
+  - certifi=2021.5.30=py38h06a4308_0
   - cycler=0.10.0=py38_0
   - dbus=1.13.18=hb2f20db_0
   - expat=2.4.1=h2531618_2
@@ -38,7 +38,6 @@ dependencies:
   - libwebp-base=1.2.0=h27cfd23_0
   - libxcb=1.14=h7b6447c_0
   - libxml2=2.9.12=h03d6c58_0
-  - llvmlite=0.36.0=py38h4630a5e_0
   - lz4-c=1.9.3=h2531618_0
   - matplotlib=3.3.4=py38h06a4308_0
   - matplotlib-base=3.3.4=py38h62a2d02_0
@@ -47,19 +46,17 @@ dependencies:
   - mkl_fft=1.3.0=py38h42c9631_2
   - mkl_random=1.2.2=py38h51133e4_0
   - ncurses=6.2=he6710b0_1
-  - numba=0.53.1=py38h8b71fd7_1
   - numexpr=2.7.3=py38h22e1b3c_1
   - numpy=1.20.3=py38hf144106_0
   - numpy-base=1.20.3=py38h74d4b33_0
   - olefile=0.46=py_0
   - openjpeg=2.3.0=h05c96fa_1
-  - openssl=1.1.1k=h7f98852_0
+  - openssl=1.1.1k=h27cfd23_0
   - pandas=1.3.0=py38h295c915_0
   - pcre=8.45=h295c915_0
   - pillow=8.3.1=py38h2c7a002_0
   - pip=21.1.3=py38h06a4308_0
   - pyasn1=0.4.8=py_0
-  - pynndescent=0.5.4=pyh6c4a22f_0
   - pyparsing=2.4.7=pyhd3eb1b0_0
   - pyqt=5.9.2=py38h05f1152_4
   - python=3.8.10=h12debd9_8
@@ -80,7 +77,6 @@ dependencies:
   - tk=8.6.10=hbc83047_0
   - tornado=6.1=py38h27cfd23_0
   - tqdm=4.61.2=pyhd3eb1b0_1
-  - umap-learn=0.5.1=py38h578d9bd_1
   - wheel=0.36.2=pyhd3eb1b0_0
   - xz=5.2.5=h7b6447c_0
   - zlib=1.2.11=h7b6447c_3
@@ -91,13 +87,17 @@ dependencies:
     - detect-delimiter==0.1.1
     - idna==3.2
     - jinja2==3.0.1
+    - llvmlite==0.36.0
     - markupsafe==2.0.1
     - matplotlib-venn==0.11.6
+    - numba==0.53.1
     - pydes==2.0.1
+    - pynndescent==0.5.4
     - pyqt5==5.15.1
     - pyqt5-sip==12.9.0
     - pyzbar==0.1.8
     - qrcode==7.2
     - requests==2.26.0
+    - umap-learn==0.5.1
     - urllib3==1.26.6
 prefix: /home/sheng/miniconda3/envs/pageant
