--- a/bin/config.ini
+++ b/bin/config.ini
@@ -5,11 +5,10 @@ quan_ref = ./population_genome
 qual_ref = ./population_genome
 maf_ref = ./personal_genome/hapmap3.vcf.gz
 ps_ref = ./personal_genome/hapmap3.vcf.gz
-qr_key = ./output/qr_code/doctor/key
-qr_snps = ./personal_genome/fingerprint_snps.txt
-qr_dr = ./output/qr_code/doctor
-qr_user = ./output/qr_code/user
-qr_dir = ./output/qr_code/doctor
+qr_snps = ./test/fingerprint_snps.txt
+qr_user = ./output/qr_code/user_qr_code.png
+qr_dir = EUR
+qr_give = ./output/qr_code/snp_qr_code.png
 population_file = ./personal_genome/hapmap3_samples.txt
 concord_ref = ./personal_genome/concordance.vcf.gz
 ref_structure = ./personal_genome/hapmap3.vcf.gz
