--- a/bin/config.ini
+++ b/bin/config.ini
@@ -5,9 +5,9 @@ quan_ref = ./population_genome
 qual_ref = ./population_genome
 maf_ref = ./personal_genome/hapmap3.vcf.gz
 ps_ref = ./personal_genome/hapmap3.vcf.gz
-qr_snps = ./test/fingerprint_snps.txt
+qr_snps = ./personal_genome/fingerprint_snps.txt
 qr_user = ./output/qr_code/user_qr_code.png
-qr_dir = EUR
+qr_dir = ./output/qr_code
 qr_give = ./output/qr_code/snp_qr_code.png
 population_file = ./personal_genome/hapmap3_samples.txt
 concord_ref = ./personal_genome/concordance.vcf.gz
@@ -24,6 +24,7 @@ snp = SNP
 ea = EA
 p = P
 beta = BETA
+or = OR
 population_col = population
 population_id = IID
 database_snp = snp
@@ -44,6 +45,7 @@ qc_male_f = 0.4
 qc_female_f = 0.6
 qc_pihat = 0.2
 use_qc_ref = False
+ps_prune = True
 
 [module]
 sample_qc = True
@@ -56,9 +58,10 @@ clinvar = True
 qr_code = True
 
 [columns]
-columns_ind = OrderedDict([('code', 0), ('name', 1), ('sex', 3), ('Disease_description', 5)])
-columns_quan = OrderedDict([('snp', 0), ('reference', 1), ('beta', 2)])
-columns_qual = OrderedDict([('snp', 0), ('reference', 1), ('interpretation', 2), ('reverse-inter', 3)])
+columns_quan = OrderedDict([('SNP', ['SNP', 'RS_ID']), ('EA', ['EA', 'EFFECT_ALLELE']),
+	('OR', ['OR', 'ODDS_RATIO']), ('BETA', ['BETA', 'EFFECT_SIZE', 'EFFECT'])])
+columns_qual = OrderedDict([('SNP', ['SNP', 'RS_ID']), ('GENOTYPE', ['GENOTYPE', 'GENO', 'GT']),
+	('MATCHED', ['MATCHED']), ('UNMATCHED', ['UNMATCHED'])])
 names_ind = {'name': 'Name', 'Description': 'Description', 'sex': 'Sex'}
 
 [lan_lib]
