--- a/environment_win.yml
+++ b/environment_win.yml
@@ -34,7 +34,6 @@ dependencies:
   - openssl=1.1.1k=h2bbff1b_0
   - pandas=1.3.0=py39hd77b12b_0
   - pillow=8.3.1=py39h4fa10fc_0
-  - pip=21.1.3=py39haa95532_0
   - pyasn1=0.4.8=py_0
   - pynndescent=0.5.4=pyh6c4a22f_0
   - pyparsing=2.4.7=pyhd3eb1b0_0
@@ -66,6 +65,7 @@ dependencies:
   - zlib=1.2.11=h62dcd97_4
   - zstd=1.4.9=h19a0ad4_0
   - pip:
+    - boltons==21.0.0
     - charset-normalizer==2.0.3
     - colorama==0.4.4
     - detect-delimiter==0.1.1
@@ -73,6 +73,7 @@ dependencies:
     - jinja2==3.0.1
     - markupsafe==2.0.1
     - matplotlib-venn==0.11.6
+    - pip==21.2.4
     - pydes==2.0.1
     - pyqt5==5.15.1
     - pyqt5-qt5==5.15.2
@@ -81,4 +82,5 @@ dependencies:
     - qrcode==7.2
     - requests==2.26.0
     - urllib3==1.26.6
+    - wget==3.2
 prefix: C:\Users\Sheng\Anaconda3\envs\pageant
