--- a/environment_linux.yml
+++ b/environment_linux.yml
@@ -100,4 +100,6 @@ dependencies:
     - requests==2.26.0
     - umap-learn==0.5.1
     - urllib3==1.26.6
+    - wget==3.2
+    - boltons==21.0.0
 prefix: /home/sheng/miniconda3/envs/pageant
