--- a/bin/config.ini
+++ b/bin/config.ini
@@ -1,20 +1,20 @@
 [file]
-quan_data = ./algorithm_database/Quantitative
-qual_data = ./algorithm_database/Qualitative
+quan_data = ./algorithm/Quantitative
+qual_data = ./algorithm/Qualitative
 quan_ref = ./population_genome
 qual_ref = ./population_genome
-maf_ref = ./personal_genome/hapmap3.vcf.gz
-ps_ref = ./personal_genome/hapmap3.vcf.gz
+maf_ref = ./personal_genome/g1k.vcf.gz
+ps_ref = ./personal_genome/g1k.vcf.gz
 qr_snps = ./personal_genome/fingerprint_snps.txt
 qr_user = ./output/qr_code/user_qr_code.png
 qr_dir = ./output/qr_code
 qr_give = ./output/qr_code/snp_qr_code.png
-population_file = ./personal_genome/hapmap3_samples.txt
+population_file = ./personal_genome/g1k_samples.txt
 concord_ref = ./personal_genome/concordance.vcf.gz
-ref_structure = ./personal_genome/hapmap3.vcf.gz
-query_db = ./algorithm_database/Query_database/Phewas_Catalog_part.tsv
-description_suf = .desc.txt
-need_suf = .snps.ref
+ref_structure = ./personal_genome/g1k.vcf.gz
+query_db = ./algorithm/Query_db/Phewas_Catalog_part.tsv
+description_suf = desc.txt
+need_suf = snps.ref
 gwas_suf = .tsv
 plink_dir = ./bin
 
