--- a/bin/config.ini
+++ b/bin/config.ini
@@ -1,17 +1,19 @@
 [file]
 quan_data = ./algorithm/Quantitative
 qual_data = ./algorithm/Qualitative
-quan_ref = ./population_genome
-qual_ref = ./population_genome
-maf_ref = ./personal_genome/g1k.vcf.gz
-ps_ref = ./personal_genome/g1k.vcf.gz
+quan_ref = ./population_genome/g1k_ref
+qual_ref = ./population_genome/g1k_ref
+maf_ref = ./population_genome/g1k_ps.vcf.gz
+ps_ref = ./population_genome/g1k_ps.vcf.gz
+qr_key = ./output/qr_code/doctor/key
 qr_snps = ./personal_genome/fingerprint_snps.txt
 qr_user = ./output/qr_code/user_qr_code.png
 qr_dir = ./output/qr_code
 qr_give = ./output/qr_code/snp_qr_code.png
-population_file = ./personal_genome/g1k_samples.txt
+population_file = ./population_genome/g1k_ps_samples.txt
 concord_ref = ./personal_genome/concordance.vcf.gz
-ref_structure = ./personal_genome/g1k.vcf.gz
+ref_structure = ./population_genome/g1k_ref/g1k_ref.vcf.gz
+ref_ethnicity = ./population_genome/g1k_ref_samples.txt
 query_db = ./algorithm/Query_db/Phewas_Catalog_part.tsv
 description_suf = desc.txt
 need_suf = snps.ref
@@ -19,7 +21,6 @@ gwas_suf = .tsv
 plink_dir = ./bin
 
 [name]
-quan_pop = EUR
 snp = SNP
 ea = EA
 p = P
@@ -28,12 +29,14 @@ or = OR
 population_col = population
 population_id = IID
 database_snp = snp
+quan_pop = EUR
+qual_pop = EUR
 
 [parameter]
-p_threshold = 1e-05
-clump-p1 = 1
+p_threshold = 5e-08
+clump-p1 = 5e-08
 clump-r2 = 0.1
-clump-kb = 250
+clump-kb = 1000.0
 clump-p2 = 0.01
 show_code = True
 qc_maf = 0.01
@@ -51,23 +54,20 @@ ps_prune = True
 sample_qc = True
 ref_dist = True
 ref_qc = True
-vep = False
 query_database = True
 pharmgkb = True
 clinvar = True
 qr_code = True
 
 [columns]
-columns_quan = OrderedDict([('SNP', ['SNP', 'RS_ID']), ('EA', ['EA', 'EFFECT_ALLELE']),
-	('OR', ['OR', 'ODDS_RATIO']), ('BETA', ['BETA', 'EFFECT_SIZE', 'EFFECT'])])
-columns_qual = OrderedDict([('SNP', ['SNP', 'RS_ID']), ('GENOTYPE', ['GENOTYPE', 'GENO', 'GT']),
-	('MATCHED', ['MATCHED']), ('UNMATCHED', ['UNMATCHED'])])
+columns_quan = OrderedDict([('SNP', ['SNP', 'RS_ID']), ('EA', ['EA', 'EFFECT_ALLELE']), ('OR', ['OR', 'ODDS_RATIO']), ('BETA', ['BETA', 'EFFECT_SIZE', 'EFFECT'])])
+columns_qual = OrderedDict([('SNP', ['SNP', 'RS_ID']), ('GENOTYPE', ['GENOTYPE', 'GENO', 'GT']), ('MATCHED', ['MATCHED']), ('UNMATCHED', ['UNMATCHED'])])
 names_ind = {'name': 'Name', 'Description': 'Description', 'sex': 'Sex'}
 
 [lan_lib]
-male = ['male', 'Male', '1', 1]
-female = ['female', 'Female', '2', 2]
-none = ['', 'None', 'No', None]
-if = ['if', 'IF']
-and = ['and', 'AND', '&', 'And']
+male = ['male', 'Male', '男', '男性', '1', 1]
+female = ['female', 'Female', '女', '女性', '2', 2]
+none = ['', '无', 'None', 'No', None]
+if = ['条件', 'if', 'IF']
+and = ['并列', 'and', 'AND', '&', 'And']
 
